# umberbar

./: .gitignore  Cargo.toml  README.md  bar.cr  black-no-nerd.theme  black.conf  black.theme  drawing_items.cr  logos.cr  sources.cr  termite.conf  termiteumberbar.sh  theme.cr  umberbar.cr  umberbar.rb  umberbar.sh  white-no-nerd.conf  white-no-nerd.theme  white.conf  white.theme  xtermumberbar.sh
crystal/: README.md  bar.cr  bar.rb  drawing_items.rb  logos.cr  logos.rb  release.sh  sources.rb  theme.rb  umberbar.cr  utils.cr  utils.rb
crystal/workflows/: crystal.yml
src/: lib.rs  main.rs
themes/: black-no-nerd.conf  black.conf  white-no-nerd.conf  white.conf
